[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'molyhu'
version = '2.0.3'
description = 'Moly.hu metadata scraper'
authors = [
    {name = 'Imre NAGY'},
]

dependencies = [
    'lxml'
]

requires-python = '>=3.7'

[project.optional-dependencies]
dev = ['pytest']

[project.urls]
Homepage = 'https://github.com/crash5/calibre-molyhu'

[tool.flake8]
max-line-length = 200
extend-ignore = [
    "E203", # Whitespace before ":"
    "E701"  # Multiple statements on one line
]

[tool.isort]
profile = "black"
src_paths = ["moly_hu/src", "moly_hu/tests", "calibre", "calibre-web"]
